# app/Http/Resources/ProductResource.php
@@ -24,17 +24,17 @@ class ProductResource extends JsonResource
     public function toArray(Request $request): array
     {
         return [
+            'type' => 'product',
             'id' => $this->id,
+            'attributes' => [
             'name' => $this->name,
             'sku' => $this->sku,
             'barcode' => $this->barcode,
-            'options' => $this->options,
-            'option_values' => $this->option_values,
-            'published_at' => $this->published_at,
+            'publishedAt' => $this->published_at,
             'status'  => $this->status,
             'quantity' => $this->quantity,
-            'price' => $this->price,
-            'variants' => ProductResource::collection($this->whenLoaded('variants')),
+            'price' => $this->price
+            ]
         ];
     }
 }
