# app/Models/Product.php
@@ -4,6 +4,8 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use App\Http\Filters\QueryFilter;
+use Illuminate\Database\Eloquent\Builder;
 
 class Product extends Model
 {
@@ -18,21 +20,16 @@ class Product extends Model
         'status',
         'price',
         'quantity',
-        'options',   
-        'option_values'
     ];
     
     protected $casts = [
-        'status' => 'bool',
-        'options' => 'json',
-        'option_values' => 'json',
         'published_at' => 'date:Y-m-d H:i'
     ];
 
     protected $dates = ['published_at'];
 
-    public function variants()
-    {
-        return $this->hasMany(Product::class, 'parent_id');
+    public function scopeFilter(Builder $builder, QueryFilter $filters) {
+        return $filters->apply($builder);
     }
+ 
 }
