# storage/api-docs/api-docs.json
@@ -93,52 +93,7 @@
                 }
             }
         },
-        "/api/products/{id}/variants": {
-            "get": {
-                "tags": [
-                    "products"
-                ],
-                "summary": "get a single product with variants",
-                "description": "",
-                "operationId": "getProductWithLoadingVariantsById",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "product id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "get a single product with variants",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/ProductWithVariants"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                }
-            }
-        }
-    },
+        
     "components": {
         "schemas": {
             "ProductResource": {
@@ -217,139 +172,7 @@
                     "name": "Product"
                 }
             },
-            "ProductVariant": {
-                "properties": {
-                    "id": {
-                        "title": "ID",
-                        "description": "ID",
-                        "format": "int64",
-                        "default": 333
-                    },
-                    "name": {
-                        "title": "name",
-                        "description": "Name",
-                        "format": "string",
-                        "default": "Js Originals relaxed t-shirt with globe back"
-                    },
-                    "sku": {
-                        "title": "sku",
-                        "description": "Sku",
-                        "format": "string",
-                        "default": "204645590"
-                    },
-                    "barcode": {
-                        "title": "barcode",
-                        "description": "",
-                        "format": "string",
-                        "default": "00123456789012"
-                    },
-                    "options": {
-                        "title": "options",
-                        "description": "",
-                        "format": "json",
-                        "default": "['Size']}"
-                    },
-                    "option_values": {
-                        "title": "option_values",
-                        "description": "",
-                        "format": "json",
-                        "default": "['Size' => 'Small']"
-                    },
-                    "description": {
-                        "title": "description",
-                        "description": "Product description",
-                        "format": "string",
-                        "default": "Js Originals relaxed t-shirt with globe back, 2023 new style!"
-                    },
-                    "quantity": {
-                        "title": "quantity",
-                        "description": "quantity",
-                        "format": "int",
-                        "default": "48"
-                    },
-                    "price": {
-                        "title": "price",
-                        "description": "Product price",
-                        "format": "float",
-                        "default": "13.50"
-                    }
-                },
-                "type": "object",
-                "xml": {
-                    "name": "ProductVariant"
-                }
-            },
-            "ProductWithVariants": {
-                "properties": {
-                    "id": {
-                        "title": "ID",
-                        "description": "ID",
-                        "format": "int64",
-                        "default": 22
-                    },
-                    "name": {
-                        "title": "name",
-                        "description": "Name",
-                        "format": "string",
-                        "default": "Js Originals relaxed t-shirt with globe back"
-                    },
-                    "sku": {
-                        "title": "sku",
-                        "description": "Sku",
-                        "format": "string",
-                        "default": "204645590"
-                    },
-                    "barcode": {
-                        "title": "barcode",
-                        "description": "",
-                        "format": "string",
-                        "default": "00123456789012"
-                    },
-                    "options": {
-                        "title": "options",
-                        "description": "",
-                        "format": "json",
-                        "default": "['Size']}"
-                    },
-                    "option_values": {
-                        "title": "option_values",
-                        "description": "",
-                        "format": "json",
-                        "default": ""
-                    },
-                    "description": {
-                        "title": "description",
-                        "description": "Product description",
-                        "format": "string",
-                        "default": "Js Originals relaxed t-shirt with globe back, 2023 new style!"
-                    },
-                    "quantity": {
-                        "title": "quantity",
-                        "description": "quantity",
-                        "format": "int",
-                        "default": "23"
-                    },
-                    "price": {
-                        "title": "price",
-                        "description": "Product price",
-                        "format": "float",
-                        "default": "13.50"
-                    },
-                    "variants": {
-                        "title": "variants",
-                        "description": "Product variants",
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/ProductVariant"
-                        }
-                    }
-                },
-                "type": "object",
-                "xml": {
-                    "name": "ProductWithVariants"
-                }
-            }
-        },
+             
         "securitySchemes": {
             "bearerAuth": {
                 "type": "http",
